# AoC

./: .gitignore  Cargo.toml  createDay.py  createDay.sh  measureDay.ps1
src/: template.py
src/2019/day1/: test.txt
src/2019/day13/: day13.py
src/2019/day14/: day14.py
src/2019/day15/: day15.py
src/2019/day16/: day16.py  test.txt
src/2019/day18/: day18.py  test.txt
src/2019/day19/: day19.py
src/2019/day2/: day2.py  test.txt
src/2019/day20/: day20.py
src/2019/day24/: day24.py
src/2019/day25/: day25.py
src/2019/day6/: test.txt
src/2019/day7/: day7.py  test.txt
src/2019/day8/: input.txt
src/2019/day9/: test.txt
src/2020/day1/: day1.py
src/2020/day10/: day10.py  test.txt
src/2022/: Cargo.toml
src/2022/.cargo/: config
src/2022/src/: helpers.rs  lib.rs  matrix.rs  parsers.rs  simple_cpu.rs
src/common/: __init__.py  advanced_math.py  buoyancyInterchangeTransmissionSystem.py  cartesianGrid.py  doublyLinkedList.py  gameConsole.py  graph.py  intCode.py  puzzleWithTests.py  reading.py  tree.py  utilityfunctions.py
src/day1/: day1.py
src/day10/: day10.py  test.txt
src/day11/: day11.py
src/day12/: day12.py  test.txt
src/day14/: day14.py  test.txt
src/day15/: day15.py
src/day16/: day16.py
src/day17/: day17.py
src/day18/: day18.py  test.txt
src/day2/: day2.py
src/day23/: day23.py
src/day24/: day24.py
src/day25/: test.txt
src/day3/: day3.py  test.txt
src/day4/: day4.py  test.txt
src/day5/: day5.py  test.txt
src/day6/: day6.py
src/day7/: day7.py  test.txt
src/day8/: day8.py  test.txt
src/day9/: day9.py
(+61 files in other folders)
