[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Cameron Warner"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
pico-args = "0.5.0"
which = "4.3.0"
