[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Cameron Warner"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
nom = "7.1.1"
paste = "1.0.9"
pico-args = "0.5.0"
queue = "0.3.1"
which = "4.3.0"
